# AI_News_Aggregator

./: README.md  main.py  pyproject.toml  requirements.txt
app/: daily_runner.py
app/database/: connection.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py
app/services/: config.py  example.env
docker/: docker-compose.yml
